[gd_scene load_steps=27 format=2]

[ext_resource path="res://Art/Floor2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/PlayerV2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Boundaries.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Stairs.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/NPC.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/Dad.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Art/Mom.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Art/Marri.tres" type="SpriteFrames" id=8]
[ext_resource path="res://Art/Steve.tres" type="SpriteFrames" id=9]
[ext_resource path="res://Art/Emily.tres" type="SpriteFrames" id=10]
[ext_resource path="res://Art/Floor1.png" type="Texture" id=11]
[ext_resource path="res://Art/Basement.png" type="Texture" id=12]
[ext_resource path="res://Scenes/SelectionScene.tscn" type="PackedScene" id=13]
[ext_resource path="res://Main.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Title.tscn" type="PackedScene" id=15]
[ext_resource path="res://Themes/SpookyTheme.tres" type="Theme" id=16]
[ext_resource path="res://NPCs.gd" type="Script" id=17]
[ext_resource path="res://Scenes/InteractionZone.tscn" type="PackedScene" id=18]
[ext_resource path="res://Art/MarriPiano.png" type="Texture" id=19]
[ext_resource path="res://Sounds/Harvest_of_the_Eclipse_PIANO.wav" type="AudioStream" id=20]
[ext_resource path="res://Ending.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Doug.tscn" type="PackedScene" id=22]
[ext_resource path="res://Sounds/Harvest_of_the_Eclipse_KAZOO.wav" type="AudioStream" id=23]
[ext_resource path="res://Scenes/Dougs.gd" type="Script" id=24]
[ext_resource path="res://Art/cat.png" type="Texture" id=25]
[ext_resource path="res://Art/hoop.png" type="Texture" id=26]

[node name="Main" type="Node"]
script = ExtResource( 14 )

[node name="Boundaries" parent="." instance=ExtResource( 3 )]
visible = false
tile_data = PoolIntArray( -33, 0, 0, -32, 0, 0, -31, 0, 0, -30, 0, 0, -29, 0, 0, -28, 0, 0, -27, 0, 0, -26, 0, 0, -25, 0, 0, -24, 0, 0, -23, 0, 0, -22, 0, 0, -21, 0, 0, -20, 0, 0, -19, 0, 0, -18, 0, 0, -17, 0, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, 65503, 0, 0, 65504, 0, 0, 71, 0, 0, 72, 0, 0, 131039, 0, 0, 131040, 0, 0, 65607, 0, 0, 65608, 0, 0, 196575, 0, 0, 196576, 0, 0, 131143, 0, 0, 131144, 0, 0, 262111, 0, 0, 262112, 0, 0, 196679, 0, 0, 196680, 0, 0, 327647, 0, 0, 327648, 0, 0, 262215, 0, 0, 262216, 0, 0, 393183, 0, 0, 393184, 0, 0, 327751, 0, 0, 327752, 0, 0, 458719, 0, 0, 458720, 0, 0, 393287, 0, 0, 393288, 0, 0, 524255, 0, 0, 524256, 0, 0, 524257, 0, 0, 524258, 0, 0, 524259, 0, 0, 524260, 0, 0, 524261, 0, 0, 524262, 0, 0, 524263, 0, 0, 524264, 0, 0, 524265, 0, 0, 524266, 0, 0, 524267, 0, 0, 524268, 0, 0, 524269, 0, 0, 524270, 0, 0, 524271, 0, 0, 524272, 0, 0, 524273, 0, 0, 524274, 0, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 458795, 0, 0, 458796, 0, 0, 458797, 0, 0, 458798, 0, 0, 458799, 0, 0, 458800, 0, 0, 458801, 0, 0, 458802, 0, 0, 458803, 0, 0, 458804, 0, 0, 458805, 0, 0, 458806, 0, 0, 458807, 0, 0, 458808, 0, 0, 458809, 0, 0, 458810, 0, 0, 458811, 0, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458815, 0, 0, 458816, 0, 0, 458817, 0, 0, 458818, 0, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 458822, 0, 0, 458823, 0, 0, 458824, 0, 0, 589791, 0, 0, 589792, 0, 0, 589793, 0, 0, 589794, 0, 0, 589795, 0, 0, 589796, 0, 0, 589797, 0, 0, 589798, 0, 0, 589799, 0, 0, 589800, 0, 0, 589801, 0, 0, 589802, 0, 0, 589803, 0, 0, 589804, 0, 0, 589805, 0, 0, 589806, 0, 0, 589807, 0, 0, 589808, 0, 0, 589809, 0, 0, 589810, 0, 0, 589811, 0, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 0, 0, 524334, 0, 0, 524335, 0, 0, 524336, 0, 0, 524337, 0, 0, 524338, 0, 0, 524339, 0, 0, 524340, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524344, 0, 0, 524345, 0, 0, 524346, 0, 0, 524347, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 524354, 0, 0, 524355, 0, 0, 524356, 0, 0, 524357, 0, 0, 524358, 0, 0, 524359, 0, 0, 524360, 0, 0, 655327, 0, 0, 655328, 0, 0, 655335, 0, 0, 589895, 0, 0, 589896, 0, 0, 720863, 0, 0, 720864, 0, 0, 720871, 0, 0, 655431, 0, 0, 655432, 0, 0, 786399, 0, 0, 786400, 0, 0, 786407, 0, 0, 720967, 0, 0, 720968, 0, 0, 851935, 0, 0, 851936, 0, 0, 851943, 0, 0, 786503, 0, 0, 786504, 0, 0, 917471, 0, 0, 917472, 0, 0, 917479, 0, 0, 852039, 0, 0, 852040, 0, 0, 983007, 0, 0, 983008, 0, 0, 983015, 0, 0, 917575, 0, 0, 917576, 0, 0, 1048543, 0, 0, 1048544, 0, 0, 1048551, 0, 0, 983111, 0, 0, 983112, 0, 0, 1114079, 0, 0, 1114080, 0, 0, 1114081, 0, 0, 1114082, 0, 0, 1114083, 0, 0, 1114084, 0, 0, 1114085, 0, 0, 1114086, 0, 0, 1114087, 0, 0, 1114088, 0, 0, 1114089, 0, 0, 1114090, 0, 0, 1114091, 0, 0, 1114092, 0, 0, 1114093, 0, 0, 1114094, 0, 0, 1114095, 0, 0, 1114096, 0, 0, 1114097, 0, 0, 1114098, 0, 0, 1114099, 0, 0, 1114100, 0, 0, 1114101, 0, 0, 1114102, 0, 0, 1114103, 0, 0, 1114104, 0, 0, 1114105, 0, 0, 1114106, 0, 0, 1114107, 0, 0, 1114108, 0, 0, 1114109, 0, 0, 1114110, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0, 1048624, 0, 0, 1048625, 0, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 1048632, 0, 0, 1048633, 0, 0, 1048634, 0, 0, 1048635, 0, 0, 1048636, 0, 0, 1048637, 0, 0, 1048638, 0, 0, 1048639, 0, 0, 1048640, 0, 0, 1048641, 0, 0, 1048642, 0, 0, 1048643, 0, 0, 1048644, 0, 0, 1048645, 0, 0, 1048646, 0, 0, 1048647, 0, 0, 1048648, 0, 0, 1179627, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114177, 0, 0, 1245163, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1179713, 0, 0, 1310699, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245249, 0, 0, 1376235, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310785, 0, 0, 1441771, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376321, 0, 0, 1507307, 0, 0, 1441834, 0, 0, 1441835, 0, 0, 1441857, 0, 0, 1572843, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507393, 0, 0, 1638379, 0, 0, 1638380, 0, 0, 1638381, 0, 0, 1638382, 0, 0, 1638383, 0, 0, 1638384, 0, 0, 1638385, 0, 0, 1638386, 0, 0, 1638387, 0, 0, 1638388, 0, 0, 1638389, 0, 0, 1638390, 0, 0, 1638391, 0, 0, 1638392, 0, 0, 1638393, 0, 0, 1638394, 0, 0, 1638395, 0, 0, 1638396, 0, 0, 1638397, 0, 0, 1638398, 0, 0, 1638399, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1572914, 0, 0, 1572915, 0, 0, 1572916, 0, 0, 1572917, 0, 0, 1572918, 0, 0, 1572919, 0, 0, 1572920, 0, 0, 1572921, 0, 0, 1572922, 0, 0, 1572923, 0, 0, 1572924, 0, 0, 1572925, 0, 0, 1572926, 0, 0, 1572927, 0, 0, 1572928, 0, 0, 1572929, 0, 0 )

[node name="Outside" type="Node" parent="."]

[node name="Sky" type="ColorRect" parent="Outside"]
margin_left = -704.0
margin_top = -80.0
margin_right = 1344.0
margin_bottom = 218.0
color = Color( 0.839216, 0.952941, 0.968627, 1 )

[node name="Ground" type="ColorRect" parent="Outside"]
margin_left = -704.0
margin_top = 256.0
margin_right = 1344.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 112, 66 )
color = Color( 0.345098, 0.223529, 0.113725, 1 )

[node name="Grass" type="ColorRect" parent="Outside"]
margin_left = -705.0
margin_top = 218.0
margin_right = 1344.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 96, 66 )
color = Color( 0.454902, 0.623529, 0.380392, 1 )

[node name="ColorRect" type="ColorRect" parent="Outside"]
margin_left = 753.542
margin_top = 188.487
margin_right = 839.542
margin_bottom = 262.487

[node name="Stairs" type="Node" parent="."]

[node name="Stairs0u" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( 744, 200 )
scale = Vector2( 1.4, 1 )

[node name="Stairs0d" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( 744, 56 )
scale = Vector2( 1.4, 1 )

[node name="Stairs1u" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( 192, 328 )
id = 1

[node name="Stairs1d" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( 304, 200 )
scale = Vector2( 1.4, 1 )
id = 1

[node name="Stairs2u" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( -184, 200 )
scale = Vector2( 1.4, 1 )
id = 2

[node name="Stairs2d" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( 72, 56 )
scale = Vector2( 1.3, 1 )
id = 2

[node name="Stairs3u" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( 1000, 328 )
id = 3

[node name="Stairs3d" parent="Stairs" instance=ExtResource( 4 )]
position = Vector2( 1112, 200 )
id = 3

[node name="FloorSprites" type="Node" parent="."]

[node name="TopFloor" type="Sprite" parent="FloorSprites"]
position = Vector2( 321.258, 58.8316 )
texture = ExtResource( 1 )

[node name="MiddleFloor" type="Sprite" parent="FloorSprites"]
position = Vector2( 320.393, 202.73 )
texture = ExtResource( 11 )

[node name="Basement" type="Sprite" parent="FloorSprites"]
position = Vector2( 359.882, 330.756 )
texture = ExtResource( 12 )

[node name="Dougs" type="Node" parent="."]
script = ExtResource( 24 )

[node name="Doug" type="Sprite" parent="Dougs"]
position = Vector2( 844.31, 158.212 )
texture = ExtResource( 25 )

[node name="Doug2" type="Sprite" parent="Dougs"]
position = Vector2( 831.92, 49.2725 )
rotation = -1.309
texture = ExtResource( 25 )

[node name="Sprite" type="Sprite" parent="Dougs/Doug2"]
position = Vector2( -4.56335, 0.537231 )
rotation = 1.309
texture = ExtResource( 26 )

[node name="Doug3" type="Sprite" parent="Dougs"]
position = Vector2( 1033, 377.174 )
texture = ExtResource( 25 )

[node name="Doug4" type="Sprite" parent="Dougs"]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 297.171, 224.152 )
texture = ExtResource( 25 )

[node name="Doug5" type="Sprite" parent="Dougs"]
position = Vector2( 607.672, 339.342 )
texture = ExtResource( 25 )

[node name="Doug6" type="Sprite" parent="Dougs"]
position = Vector2( -116.251, 361.215 )
texture = ExtResource( 25 )

[node name="Doug7" type="Sprite" parent="Dougs"]
position = Vector2( 152.577, 206.59 )
texture = ExtResource( 25 )

[node name="Doug8" type="Sprite" parent="Dougs"]
position = Vector2( 256, 82.3 )
texture = ExtResource( 25 )

[node name="Doug9" type="Sprite" parent="Dougs"]
position = Vector2( -59.0639, 43.2079 )
texture = ExtResource( 25 )

[node name="Doug10" type="Sprite" parent="Dougs"]
position = Vector2( 539.107, 38.2848 )
texture = ExtResource( 25 )

[node name="Doug11" type="Sprite" parent="Dougs"]
position = Vector2( 1188.12, 249.498 )
texture = ExtResource( 25 )

[node name="Doug12" type="Sprite" parent="Dougs"]
position = Vector2( -488.24, 100.283 )
texture = ExtResource( 25 )

[node name="NPCs" type="Node" parent="."]
script = ExtResource( 17 )

[node name="Steve" parent="NPCs" instance=ExtResource( 5 )]
position = Vector2( 920, 112 )
spriteFrames = ExtResource( 9 )
spriteOffset = 11

[node name="Marri" parent="NPCs" instance=ExtResource( 5 )]
position = Vector2( 192, -128 )
spriteFrames = ExtResource( 8 )
spriteOffset = 10

[node name="Mom" parent="NPCs" instance=ExtResource( 5 )]
position = Vector2( -128, 112 )
spriteFrames = ExtResource( 7 )
spriteOffset = 7

[node name="Dad" parent="NPCs" instance=ExtResource( 5 )]
position = Vector2( 64, 256 )
spriteFrames = ExtResource( 6 )

[node name="Emily" parent="NPCs" instance=ExtResource( 5 )]
position = Vector2( 448, 384 )
spriteFrames = ExtResource( 10 )
spriteOffset = 25

[node name="EndDay" parent="NPCs" instance=ExtResource( 18 )]
position = Vector2( -288, 256 )

[node name="Doug" parent="NPCs" instance=ExtResource( 22 )]
position = Vector2( -320, 256 )

[node name="MarriPiano" type="Sprite" parent="."]
visible = false
position = Vector2( -108.695, 359.72 )
texture = ExtResource( 19 )

[node name="MarriSong" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -108.096, 352.202 )
stream = ExtResource( 20 )

[node name="PlayerV2" parent="." instance=ExtResource( 2 )]
position = Vector2( -368, 225 )

[node name="Bgm" type="AudioStreamPlayer" parent="PlayerV2"]
stream = ExtResource( 23 )
volume_db = -10.0

[node name="SelectionScene" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Title" parent="." instance=ExtResource( 15 )]
visible = false

[node name="DayTransition" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="DayTransition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="DayTransition/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 16 )
text = "Monday"
align = 1
valign = 1

[node name="Ending" parent="." instance=ExtResource( 21 )]
visible = false

[connection signal="EndDay" from="SelectionScene" to="." method="_on_SelectionScene_EndDay"]
[connection signal="Start" from="Title" to="." method="_on_Title_Start"]
